-issue#5726: Poller cache may not always update if hostname changes
-issue#5727: When using CMD poller, Failure and Recovery dates may have incorrect values
-issue#5731: Saving a Tree can cause the tree to become unpublished
-issue#5732: Web Basic Authentication does not record user logins
-issue#5733: When using Accent-based languages, translations may not work properly
-feature#5692: Add a device "enabled/disabled" indicator next to the graphs
-feature#5710: Notify the admin periodically when a remote data collector goes into heartbeat status
-feature#5716: Add template for Aruba Clearpass
-feature#5730: Add fliter/sort of Device Templates by Graph Templates

1.2.26
-security#GHSA-xwqc-7jc4-xm73: XSS vulnerability when importing a template file
-security#GHSA-pfh9-gwm6-86vp: RCE vulnerability when managing links
-security#GHSA-vr3c-38wh-g855: SQL Injection vulnerability when managing poller devices
-security#GHSA-wc73-r2vw-59pr: XSS vulnerability when adding new devices
-security#GHSA-q7g7-gcf6-wh4x: XSS vulnerability when viewing data sources in debug mode
-security#GHSA-w85f-7c4w-7594: SQL Injection vulnerability when managing SNMP Notification Receivers
-issue#5464: When viewing data sources, an undefined variable error may be seen
-issue#5478: Improvements for Poller Last Run Date
-issue#5481: Attempting to edit a Data Query that does not exist throws warnings and not an GUI error
-issue#5483: Improve PHP 8.1 support when adding devices
-issue#5485: Viewing Data Query Cache can cause errors to be logged
-issue#5489: Preserve option is not properly honoured when removing devices at command line
-issue#5490: Infinite recursion is possible during a database failure
-issue#5492: Monitoring Host CPU's does not always work on Windows endpoints
-issue#5493: Multi select drop down list box not rendered correctly in Chrome and Edge
-issue#5494: Selective Plugin Debugging may not always work as intended